# cpp_modules

./: CMakeLists.txt  ReadMe.md  main.cpp
speech/: speech.cpp  speech_impl.cpp
